This is a simple BlackJack Game using JavaScript

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Black Jack</title>
 </head>
 <body>
+    <h1>Blackjack</h1>
+    <p id="message-el">Want to play a round?</p>
+    <p id="card-el">Cards:</p>
+    <p id="sum-el">Sum:</p>
+    <button id="game-starter" type="button" onclick="startGame()">Start Game</button>
+    <button id="new-card" type="button" onclick="newCard()">New Card</button><br>
+    <button id="refresh" type="button" onclick="reStartGame()">Refresh</button>
     
     <script src="index.js"></script>
 </body>
